--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^10.11.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
@@ -54,7 +53,6 @@
     "qs": "^6.12.1",
     "screenfull": "^6.0.2",
     "sortablejs": "^1.15.2",
-    "tailwindcss": "^4.0.0",
     "vue": "^3.4.31",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0",
@@ -71,7 +69,7 @@
     "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "code-inspector-plugin": "^0.16.1",
     "cz-git": "1.9.2",
     "czg": "^1.9.2",
@@ -81,7 +79,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -95,6 +93,9 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
+    "stylelint-scss": "^6.11.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.2",
     "unplugin-vue-setup-extend-plus": "^1.0.1",
     "vite": "^5.3.2",
