--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "driver.js": "^1.3.1",
     "echarts": "^5.5.1",
@@ -53,6 +54,7 @@
     "qs": "^6.12.1",
     "screenfull": "^6.0.2",
     "sortablejs": "^1.15.2",
+    "tailwind-merge": "^3.0.1",
     "vue": "^3.4.31",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0",
