--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,8 +50,11 @@
     "CSDN",
     "daterange",
     "datetimerange",
+    "doctorialhat",
     "echarts",
     "Eleme",
+    "evenodd",
+    "Examing",
     "fangda",
     "geeker",
     "Gitee",
@@ -59,6 +62,8 @@
     "huiche",
     "iconfont",
     "juejin",
+    "linecap",
+    "linejoin",
     "liquidfill",
     "longpress",
     "monthrange",
